--- a/res/values-b+sr+Latn/values.xml
+++ b/res/values-b+sr+Latn/values.xml
@@ -3,4 +3,75 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-b+sr+Latn/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"<xliff:g id="APP_NAME">%1$s</xliff:g> ima problema sa Google Play uslugama. Probajte ponovo."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-b+sr+Latn/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Povezano je sa <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Povezivanje sa <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Prekini vezu"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-b+sr+Latn/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Oglas"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Prebacivanje na %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Opcionalni titl"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Opcionalni titl je nedostupan"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Prekini vezu"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Slika koja se prikazuje dok Cast prijemnik reprodukuje oglas"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Prikazivanje oglasa je u toku…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Omot albuma"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Strim uživo"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Učitava se…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Preskoči"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Prosledi"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Premotaj deset sekundi unapred"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Premotaj trideset sekundi unapred"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Isključi zvuk"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Pauzirajte"</string>
+<string name="cast_play" msgid="5906987965619702702">"Pusti"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Taster za premotavanje unazad"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Premotaj deset sekundi unazad"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Premotaj trideset sekundi unazad"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Kontrola za traženje pri reprodukciji"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Preskoči na sledeću stavku"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Preskoči na prethodnu stavku"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Taster za zaustavljanje"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Zaustavi strim uživo"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Zvuk"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Otkaži"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Opcionalni titl"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"<xliff:g id="POSITION">%1$d</xliff:g>. pesma"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Ništa"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"Potvrdi"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Titlovi"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Uključi zvuk"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-b+sr+Latn/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Omogući"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> neće funkcionisati ako ne omogućite Google Play usluge."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Omogućite Google Play usluge"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Instaliraj"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne može da se pokrene bez Google Play usluga, koje nisu instalirane na uređaju."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Preuzmite Google Play usluge"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Greška Google Play usluga"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne može da se pokrene bez Google Play usluga, koje uređaj ne podržava."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Ažuriraj"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne može da se pokrene ako ne ažurirate Google Play usluge."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Ažurirajte Google Play usluge"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne može da se pokrene bez Google Play usluga, koje se trenutno ažuriraju."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Potrebna je nova verzija Google Play usluga. Uskoro će se ažurirati."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Otvori na telefonu"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Prijavi me"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Prijavi me na Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-b+sr+Latn/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Čuvanje slike"</string>
+<string name="s2" msgid="4550830452390689489">"Želite li da dozvolite da oglas sačuva sliku u Galeriji slika?"</string>
+<string name="s3" msgid="2435407834265420668">"Prihvati"</string>
+<string name="s4" msgid="9167523597401839819">"Odbij"</string>
+<string name="s5" msgid="1566682516266724847">"Pravljenje događaja u kalendaru"</string>
+<string name="s6" msgid="5996672174517137271">"Želite li da dozvolite da oglas napravi događaj u kalendaru?"</string>
 </resources>
